--- a/docroot/themes/iucn_backend/less/components/diff.less
+++ b/docroot/themes/iucn_backend/less/components/diff.less
@@ -194,16 +194,12 @@
 
 .paragraph-diff-form-modal {
   .responsive-wrapper {
-    overflow: auto;
+    overflow: auto hidden;
   }
   .double-scrollbar-helper {
-    background: #ececec;
-    border-bottom: 1px solid rgb(230, 228, 223);
     height: 14px;
     overflow: auto hidden;
     .inner {
-      background: #ececec;
-      border-bottom: 1px solid rgb(230, 228, 223);
       height: 14px;
       overflow: hidden;
     }
