--- a/docroot/themes/iucn_backend/less/components/row_paragraph_widget.less
+++ b/docroot/themes/iucn_backend/less/components/row_paragraph_widget.less
@@ -216,7 +216,7 @@
     }
     @media (max-width: 999px) {
       .responsive-wrapper {
-        overflow: auto;
+        overflow: auto hidden;
       }
       .double-scrollbar-helper {
         background: #ececec;
